@@ -22,5 +22,10 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="3.0.3.0" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
+  <package id="xunit" version="2.1.0-beta1-build2945" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.1.0-beta1-build2945" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0-beta1-build2945" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta1-build2945" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-beta1-build1051" targetFramework="net45" />
 </packages>
